--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: "Sanchez", "Courier New", serif, monospace;
+  font-family: "Anonymous Pro", "Courier New", monospace;
+  width: 80%;
+  margin: auto;
 }
 
 h1 {
@@ -24,6 +27,13 @@ p {
 
 a {
   text-decoration: none;
+}
+
+hr {
+  margin: 1rem 0 1rem 0;
+  height: 0.188rem;
+  border: transparent;
+  background-color: #212121;
 }
 
 a:hover {
