--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@
 
 body {
   font-family: "Anonymous Pro", "Courier New", monospace;
-  width: 80%;
-  margin: auto;
+  margin: 0 10% 0 10%;
+}
+@media screen and (max-width: 48rem) {
+  body {
+    margin: 0 5% 0 5%;
+  }
 }
 
 h1 {
@@ -20,18 +24,20 @@ h3 {
   padding: 0.6rem 0.6rem 0.6rem 0;
 }
 
-p {
+.paragrafo{
   font-size: 1rem;
   padding: 0 0.6rem 0.6rem 0;
+  line-height: 1.5rem;
 }
 
 a {
   text-decoration: none;
+  line-height: 1.5rem;
 }
 
 hr {
   margin: 1rem 0 1rem 0;
-  height: 0.188rem;
+  height: 0.125rem;
   border: transparent;
   background-color: #212121;
 }
@@ -42,6 +48,6 @@ a:hover {
 }
 
 li {
-  padding: 0 0.6rem 0.6rem 0;
+  line-height: 1.5rem;
   list-style: none;
 }
